finished up to custom interfaces tutorial

--- a/ros2_tutorials_ws/src/cpp_srvcli/package.xml
+++ b/ros2_tutorials_ws/src/cpp_srvcli/package.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>cpp_pubsub</name>
+  <name>cpp_srvcli</name>
   <version>0.0.0</version>
-  <description>TODO: Package description</description>
+  <description>example service/client interaction</description>
   <maintainer email="dlchaytor@outlook.com">dchaytor</maintainer>
   <license>Apache-2.0</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
+
   <depend>rclcpp</depend>
   <depend>tutorial_interfaces</depend>
 
