--- a/ros2_tutorials_ws/src/cpp_pubsub/CMakeLists.txt
+++ b/ros2_tutorials_ws/src/cpp_pubsub/CMakeLists.txt
@@ -12,16 +12,16 @@ endif()
 # find dependencies
 find_package(ament_cmake REQUIRED)
 find_package(rclcpp REQUIRED)
-find_package(std_msgs REQUIRED)
+find_package(tutorial_interfaces REQUIRED)
 # uncomment the following section in order to fill in
 # further dependencies manually.
 # find_package(<dependency> REQUIRED)
 
 add_executable(talker src/publisher_lambda_function.cpp)
-target_link_libraries(talker PUBLIC rclcpp::rclcpp ${std_msgs_TARGETS})
+target_link_libraries(talker PUBLIC rclcpp::rclcpp ${tutorial_interfaces_TARGETS})
 
 add_executable(listener src/subscriber_lambda_function.cpp)
-target_link_libraries(listener PUBLIC rclcpp::rclcpp ${std_msgs_TARGETS})
+target_link_libraries(listener PUBLIC rclcpp::rclcpp ${tutorial_interfaces_TARGETS})
 
 install(TARGETS
 	talker
